--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ workflows:
           filters:
             branches:
               only:
-                - develop
+                - dev
 
       # Production builds are exectuted only on tagged commits to the
       # master branch.
