--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,6 +66,7 @@ workflows:
             branches:
               only:
                 - dev
+                - hotfix/buttonDoubleClick
 
       # Production builds are exectuted only on tagged commits to the
       # master branch.
