ci: deploy to dev

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,7 @@ workflows:
               only:
                 - dev
                 - hotfix/resendActivationEmail
+                - feat/plat-320
 
       # Production builds are exectuted only on tagged commits to the
       # master branch.
