--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,8 +70,7 @@ workflows:
             branches:
               only:
                 - dev
-                - hotfix/resendActivationEmail
-                - feat/plat-320
+                - jira-plat-700
 
       # Production builds are exectuted only on tagged commits to the
       # master branch.
