--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,14 @@ jobs:
       APPNAME: "tc-auth-lib"    
     steps: *builddeploy_steps
 
+  "build-dev":
+    <<: *defaults
+    environment:
+      DEPLOY_ENV: "QA"
+      LOGICAL_ENV: "qa"
+      APPNAME: "tc-auth-lib"    
+    steps: *builddeploy_steps
+
   "build-prod":
     <<: *defaults
     environment:
@@ -71,6 +79,14 @@ workflows:
               only:
                 - dev
                 - jira-plat-742
+
+      # Development builds are executed on "develop" branch only.
+      - "build-qa":
+          context : org-global
+          filters:
+            branches:
+              only:
+                - qa
 
       # Production builds are exectuted only on tagged commits to the
       # master branch.
