--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,7 @@ workflows:
             branches:
               only:
                 - dev
-                - jira-plat-742
+                - feature/primary-role
 
       # Production builds are exectuted only on tagged commits to the
       # master branch.
