--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ install_dependency: &install_dependency
   name: Installation of build and deployment dependencies.
   command: |
     sudo apt update
-    sudo apt install jq python3-pip
+    sudo apt install jq python3-pip file
     sudo pip3 install awscli --upgrade
     sudo pip3 install docker-compose
 install_deploysuite: &install_deploysuite
