--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,6 +72,7 @@ workflows:
               only:
                 - dev
                 - feature/primary-role
+                - account-settings-app
 
       # Production builds are exectuted only on tagged commits to the
       # master branch.
